{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 99,
  "lineage": "6e8f7fa6-9536-ca3b-54d1-909528bc62c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0704b049b250ad92d",
            "arn": "arn:aws:ec2:eu-west-1:294308689404:elastic-ip/eipalloc-0704b049b250ad92d",
            "association_id": "eipassoc-0ec168e68c3d39d01",
            "domain": "vpc",
            "id": "eipalloc-0704b049b250ad92d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07283d01eebaa8f81",
            "private_dns": "ip-10-0-4-30.eu-west-1.compute.internal",
            "private_ip": "10.0.4.30",
            "public_dns": "ec2-18-200-214-219.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.214.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1e08087c9f3aff1",
            "arn": "arn:aws:ec2:eu-west-1:294308689404:elastic-ip/eipalloc-0b1e08087c9f3aff1",
            "association_id": "eipassoc-0aeeed85e9f70751e",
            "domain": "vpc",
            "id": "eipalloc-0b1e08087c9f3aff1",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0207553a6a399f111",
            "private_dns": "ip-10-0-3-221.eu-west-1.compute.internal",
            "private_ip": "10.0.3.221",
            "public_dns": "ec2-34-246-249-148.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.249.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:internet-gateway/igw-01b0472dbb7febf64",
            "id": "igw-01b0472dbb7febf64",
            "owner_id": "294308689404",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0704b049b250ad92d",
            "association_id": "eipassoc-0ec168e68c3d39d01",
            "connectivity_type": "public",
            "id": "nat-099db777ecc7fffd0",
            "network_interface_id": "eni-07283d01eebaa8f81",
            "private_ip": "10.0.4.30",
            "public_ip": "18.200.214.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0969ff9eb8d86ffd5",
            "tags": {
              "Name": "eks-nat-gateway-1"
            },
            "tags_all": {
              "Name": "eks-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1e08087c9f3aff1",
            "association_id": "eipassoc-0aeeed85e9f70751e",
            "connectivity_type": "public",
            "id": "nat-04ad7673968897ff1",
            "network_interface_id": "eni-0207553a6a399f111",
            "private_ip": "10.0.3.221",
            "public_ip": "34.246.249.148",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e84c372f72da13ab",
            "tags": {
              "Name": "eks-nat-gateway-2"
            },
            "tags_all": {
              "Name": "eks-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:route-table/rtb-05e8b21ad5cb63ec9",
            "id": "rtb-05e8b21ad5cb63ec9",
            "owner_id": "294308689404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-099db777ecc7fffd0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-route-table-1"
            },
            "tags_all": {
              "Name": "eks-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:route-table/rtb-015510e66f7d10b44",
            "id": "rtb-015510e66f7d10b44",
            "owner_id": "294308689404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ad7673968897ff1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-route-table-2"
            },
            "tags_all": {
              "Name": "eks-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:route-table/rtb-0e982ffece691595e",
            "id": "rtb-0e982ffece691595e",
            "owner_id": "294308689404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b0472dbb7febf64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-route-table"
            },
            "tags_all": {
              "Name": "eks-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a4b000cfbb509a8",
            "route_table_id": "rtb-05e8b21ad5cb63ec9",
            "subnet_id": "subnet-004ce18d9076cdc3f"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e8cf65e02aa22aa",
            "route_table_id": "rtb-015510e66f7d10b44",
            "subnet_id": "subnet-0588d778c93bddef0"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce08c6b75f85ad66",
            "route_table_id": "rtb-0e982ffece691595e",
            "subnet_id": "subnet-0969ff9eb8d86ffd5"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeb5308aac1516e0",
            "route_table_id": "rtb-0e982ffece691595e",
            "subnet_id": "subnet-0e84c372f72da13ab"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:subnet/subnet-004ce18d9076cdc3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004ce18d9076cdc3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294308689404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1",
              "kubernetes.io/cluster/simple-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1",
              "kubernetes.io/cluster/simple-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:subnet/subnet-0588d778c93bddef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0588d778c93bddef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294308689404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-2",
              "kubernetes.io/cluster/simple-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-2",
              "kubernetes.io/cluster/simple-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:subnet/subnet-0969ff9eb8d86ffd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969ff9eb8d86ffd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294308689404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:subnet/subnet-0e84c372f72da13ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e84c372f72da13ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294308689404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c7076c34c4d358e3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:294308689404:vpc/vpc-0c7076c34c4d358e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0494e87d548cca394",
            "default_route_table_id": "rtb-03c20a65dde6f598e",
            "default_security_group_id": "sg-0ffb4f968167be896",
            "dhcp_options_id": "dopt-002be90d5e8ab7b2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7076c34c4d358e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c20a65dde6f598e",
            "owner_id": "294308689404",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "4473",
                "uid": "3a1953b7-5d1a-4c01-9303-6110cb24b5b0"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    }
  ]
}